# any_view

./: .beman-tidy.yaml  .exemplar_version  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  beman.any_view-config.cmake.in  lockfile.json  vcpkg.json
.devcontainer/: devcontainer.json  postcreate.sh
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  pre-commit.yml  vcpkg-release.yml
examples/: CMakeLists.txt  istream.cpp  sum_views.cpp
include/beman/any_view/: CMakeLists.txt  any_view.hpp  any_view_options.hpp  concepts.hpp  config.hpp.in  range_traits.hpp  reserve_hint.hpp
include/beman/any_view/detail/: adaptor_base.hpp  adaptors.hpp  any_iterator.hpp  base.hpp  capabilities.hpp  compressed_ptr.hpp  concepts.hpp  default_iterator.hpp  default_view.hpp  intrusive_small_ptr.hpp  iterator.hpp  iterator_adaptor.hpp  iterator_interface.hpp  iterator_policies.hpp  lifetimebound.hpp  no_unique_address.hpp  policies.hpp  polymorphic.hpp  polymorphic_iterator.hpp  polymorphic_view.hpp  protocols.hpp  reference_converts_from_temporary.hpp  small_polymorphic.hpp  small_storage.hpp  type_traits.hpp  unique_address.hpp  unreachable.hpp  unreachable_iterator.hpp  utility.hpp  view_adaptor.hpp  view_interface.hpp  view_policies.hpp  vtable.hpp  witness.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/any_view/: CMakeLists.txt  all.benchmark.cpp  concepts.test.cpp  constexpr.test.cpp  iterator.test.cpp  options.hpp  sfinae.test.cpp  take.benchmark.cpp  type_traits.test.cpp
tests/beman/any_view/detail/: eager.cpp  eager.hpp  fused.cpp  fused.hpp  lazy.cpp  lazy.hpp  product.hpp  products.cpp  products.hpp  reserved.cpp  reserved.hpp  tracing_iterator.hpp
